[workspace]

members = [
#    "65c02",
#    "6502",
    "arm4_be",
    "arm5t_le",
    "arm6_be",
    "arm7_le",
    "data_be_64",
    "pic12c5xx",
    "superh4_le",
    "toy64_le",
    "toy_builder_be",
    "toy_builder_le_align2",
    "toy_wsz_le",
    "arm4t_be",
    "arm4_le",
    "arm5_be",
    "arm6_le",
    "arm8_be",
    "data_le_64",
    "pic16c5x",
    "toy64_be",
    "toy_be",
    "toy_builder_be_align2",
    "toy_le",
    "Cargo.toml",
    "arm4t_le",
    "arm5t_be",
    "arm5_le",
    "arm7_be",
    "arm8_le",
    "dyn-tester",
    "superh4_be",
    "toy64_be_harvard",
    "toy_be_posstack",
    "toy_builder_le",
    "toy_wsz_be",
]
