[workspace]

members = [
    "65c02",
    "6502",
    "arm4_be",
    "arm5t_le",
    "arm6_be",
    "arm7_le",
    "data_be_64",
    "pic12c5xx",
    "superh4_le",
    "toy64_le",
    "toy_builder_be",
    "toy_builder_le_align2",
    "toy_wsz_le",
    "arm4t_be",
    "arm4_le",
    "arm5_be",
    "arm6_le",
    "arm8_be",
    "data_le_64",
    "pic16c5x",
    "toy64_be",
    "toy_be",
    "toy_builder_be_align2",
    "toy_le",
    "Cargo.toml",
    "arm4t_le",
    "arm5t_be",
    "arm5_le",
    "arm7_be",
    "arm8_le",
    "dyn-tester",
    "superh4_be",
    "toy64_be_harvard",
    "toy_be_posstack",
    "toy_builder_le",
    "toy_wsz_be",
    "6805",
    "6809",
    "80251",
    "80390",
    "8051",
    "8085",
    #"aarch64",
    #"aarch64_applesilicon",
    #"aarch64be",
    "avr8",
    "avr8e",
    "cp1600",
    "cr16b",
    "cr16c",
    "dalvik_base",
    "dalvik_dex_android10",
    "dalvik_dex_android11",
    "dalvik_dex_android12",
    "dalvik_dex_kitkat",
    "dalvik_dex_lollipop",
    "dalvik_dex_marshmallow",
    "dalvik_dex_nougat",
    "dalvik_dex_oreo",
    "dalvik_dex_pie",
    "dalvik_odex_kitkat",
    "dspic30f",
    "dspic33c",
    "dspic33e",
    "dspic33f",
    "h6309",
    "hc05",
    "hc08",
    "hcs08",
    "hcs12",
    "m8c",
    "mcs96",
    "mx51",
    "pa_risc32be",
    "pic16",
    "pic16f",
    #"pic17c7xx",
    "pic18",
    "pic24e",
    "pic24f",
    "pic24h",
    "ppc_32_4xx_be",
    "ppc_32_4xx_le",
    "ppc_32_be",
    "ppc_32_le",
    "ppc_32_quicciii_be",
    "ppc_32_quicciii_le",
    "ppc_64_be",
    "ppc_64_isa_altivec_be",
    "ppc_64_isa_altivec_le",
    "ppc_64_isa_altivec_vle_be",
    "ppc_64_isa_be",
    "ppc_64_isa_le",
    "ppc_64_isa_vle_be",
    "ppc_64_le",
    "riscv.ilp32d",
    "riscv.lp64d",
    "sh_1",
    "sh_2",
    "sh_2a",
    "sparcv9_32",
    "sparcv9_64",
    "tricore",
    "v850",
    "z180",
    "z80",
]
